--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ packaged.*.yaml
 *.log
 *.txt
 test/cypress
+test-cucumber/cypress
 !test/src/plugins/index.js
+!test-cucumber/src/plugins/index.js
 *.env.json
 .env
