--- a/cf.infrastructure.yaml
+++ b/cf.infrastructure.yaml
@@ -28,6 +28,7 @@ Resources:
                   - dynamodb:GetShardIterator
                   - dynamodb:DescribeStream
                   - dynamodb:ListStreams
+                  - dynamodb:BatchWriteItem
                   - logs:CreateLogStream
                   - logs:PutLogEvents
                   - logs:CreateLogGroup
