--- a/cf.foci2020.yaml
+++ b/cf.foci2020.yaml
@@ -22,6 +22,7 @@ Resources:
         Env: !Ref Env
         TestUserPassword: !Ref TestUserPassword
         DatabaseArchive: !GetAtt Data.Outputs.DatabaseArchive
+        EventDeadLetterQueueArn: !GetAtt Infrastructure.Outputs.EventDeadLetterQueueArn
 
   Data:
     Type: AWS::CloudFormation::Stack
@@ -35,6 +36,8 @@ Resources:
     Type: AWS::CloudFormation::Stack
     Properties:
       TemplateURL: cf.infrastructure.yaml
+      Parameters:
+        Env: !Ref Env
 
   Team:
     Type: AWS::CloudFormation::Stack
