--- a/package.json
+++ b/package.json
@@ -2,25 +2,38 @@
   "name": "foci2020",
   "version": "1.0.0",
   "scripts": {
-    "build:api": "cd api && npm run build",
     "samconfig": "cp samconfig.${ENV}.toml samconfig.toml",
     "deploy:local": "export ENV=LOCAL && yarn samconfig && sam deploy -t cf.foci2020.yaml && yarn postdeploy --profile losonczil",
     "deploy:ci": "export ENV=CI && yarn samconfig && sam deploy -t cf.foci2020.yaml && yarn postdeploy --profile ci",
     "postdeploy": "aws lambda invoke --function-name Foci2020-${ENV}-PostDeploy /dev/null",
-    "test:dev": "jest --maxWorkers=4 --watchAll --silent",
-    "test": "jest --maxWorkers=4 --silent",
-    "lint": "eslint . --ext .ts"
+    "build:api": "rimraf ./dist/api && webpack",
+    "test:api:dev": "jest --maxWorkers=4 --watchAll --silent",
+    "test:api": "jest --maxWorkers=4 --silent",
+    "lint:api": "eslint . --ext .ts",
+    "lintfix:api": "eslint . --ext .ts --fix"
   },
   "devDependencies": {
+    "@types/aws-lambda": "8.10.71",
     "@types/jest": "26.0.20",
+    "@types/json-schema": "7.0.7",
+    "@types/node": "14.14.25",
+    "@types/uuid": "8.0.0",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
+    "ajv": "6.12.6",
+    "aws-sdk": "2.838.0",
     "eslint": "7.19.0",
     "jest": "26.6.3",
     "jest-date-mock": "1.0.8",
     "jest-dot-reporter": "1.0.14",
+    "rimraf": "3.0.2",
     "ts-jest": "26.5.0",
-    "typescript": "4.1.3"
+    "ts-loader": "8.0.15",
+    "typescript": "4.1.3",
+    "uuid": "8.1.0",
+    "webpack": "5.20.2",
+    "webpack-cli": "4.5.0",
+    "webpack-glob-entry": "2.1.1"
   },
   "jest": {
     "verbose": true,
